--- a/index.html
+++ b/index.html
@@ -4,11 +4,11 @@
     <meta charset="utf-8">
     <meta name>
     <title>
-        Hello мир
+        Module02
     </title>
     <link rel="stylesheet" href="./css/styles.css">
 </head>
 <body>World</body>
-
-<h1>Это шапка сайта</h1>
+<h1> Hi</h1>
+<p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Recusandae inventore voluptatem, aperiam amet totam accusamus.</p>
 </html>
