--- a/index.html
+++ b/index.html
@@ -4,11 +4,14 @@
     <meta charset="utf-8">
     <meta name>
     <title>
-        Module02
+        Module02 
     </title>
     <link rel="stylesheet" href="./css/styles.css">
 </head>
 <body>World</body>
 <h1> Hi</h1>
 <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Recusandae inventore voluptatem, aperiam amet totam accusamus.</p>
+<ul>
+    <li>One</li>
+</ul>
 </html>
