--- a/index.html
+++ b/index.html
@@ -13,5 +13,8 @@
 <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Recusandae inventore voluptatem, aperiam amet totam accusamus.</p>
 <ul>
     <li>One</li>
+    <li>Two</li>
+    
 </ul>
+<img src="./images/1.jpeg" alt="Flower" width="600">
 </html>
